--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -102,7 +102,7 @@
     <div class="notification is-danger" style="border-radius: 0px;" id="notification">
         <button class="delete"></button>
         <div class="has-text-centered">
-            Help us out with Oauth2! Join the <a href="<%= support %>" class="ded">server</a> and the <a href="#team">development</a> team to help out!
+            Help us out with oauth2! Join the <a href="<%= support %>" class="ded">server</a> and the <a href="#team">development</a> team to help out!
         </div>
     </div>
         <div id="particles-js" class="is-hidden-mobile">
@@ -204,7 +204,7 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://oskikiboy.me/img/icon.png">
+                                    <figure class="image is-64x64"><img src="https://oskikiboy.me/img/icon.png" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -225,7 +225,7 @@
                             <article class="media">
                                 <div class="media-left">
                                     <figure class="image is-64x64"><img
-                                                                        src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
+                                                                        src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -246,7 +246,7 @@
                             <article class="media">
                                 <div class="media-left">
                                     <figure class="image is-64x64"><img
-                                                                        src="https://cdn.discordapp.com/avatars/229232856063410176/95b68e024bf41e0d5761447c4557bb1c.png?size=2048">
+                                                                        src="https://cdn.discordapp.com/avatars/229232856063410176/05ed767353dc5e24d79666ad1220e1f6.webp?size=2048" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -267,7 +267,7 @@
                             <article class="media">
                                 <div class="media-left">
                                     <figure class="image is-64x64"><img
-                                                                        src="https://cdn.discordapp.com/avatars/239738897985175552/8e28a509823eb5f5978ffb87fab728fa.png?size=2048">
+                                                                        src="https://cdn.discordapp.com/avatars/239738897985175552/8e28a509823eb5f5978ffb87fab728fa.png?size=2048" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -287,7 +287,7 @@
                             <article class="media">
                                 <div class="media-left">
                                     <figure class="image is-64x64"><img
-                                                                        src="https://cdn.discordapp.com/avatars/321193377951645699/610f7037f28820e75694cb621ff1927e.png?size=2048">
+                                                src="https://cdn.discordapp.com/avatars/321193377951645699/610f7037f28820e75694cb621ff1927e.png?size=2048" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -295,6 +295,7 @@
                                         <p>
                                             <strong>Blackberry pi</strong>
                                             <small>@Blackberry pi#6618</small>
+                                            <span class="tag is-dark is-small">Project Lead</span>
                                             <span class="tag is-success is-small">Back end Developer</span>
                                             <br>
                                         </p>
@@ -306,7 +307,7 @@
                             <article class="media">
                                 <div class="media-left">
                                     <figure class="image is-64x64"><img
-                                                                        src="https://cdn.discordapp.com/avatars/236002091120721930/a_a5bb1694dcb429c3678b3766de5fe545.gif?size=2048">
+                                                                        src="https://cdn.discordapp.com/avatars/236002091120721930/a_a5bb1694dcb429c3678b3766de5fe545.gif?size=2048" style="border-radius: 100%;">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -314,6 +315,101 @@
                                         <p>
                                             <strong>Codefox</strong>
                                             <small>@Codefox#0953</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img
+                                                src="https://cdn.discordapp.com/avatars/178409772436029440/a_0fbc1a8e9ee2427c407940ac01548ee2.gif?size=2048" style="border-radius: 100%;">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Acorn</strong>
+                                            <small>@Acorn#4444</small>
+                                            <span class="tag is-success is-small">Front end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img
+                                                src="https://cdn.discordapp.com/avatars/150707175214415872/a4b53a93b1685b6a021b7a44cc95b4e3.webp?size=1024" style="border-radius: 100%;">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Brandon14</strong>
+                                            <small>@Brandon14#0131</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img
+                                                src="https://cdn.discordapp.com/avatars/209395113485402123/b6f7cae6ee6a820b6ececda49a21e9b1.webp?size=1024" style="border-radius: 100%;">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Jayden</strong>
+                                            <small>@Jayden#5395</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img
+                                                src="https://cdn.discordapp.com/avatars/258971374511587329/c14dd1b3810a0de7cf5cd55e3382b70d.webp?size=1024" style="border-radius: 100%;">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Hurricane</strong>
+                                            <small>@Hurricane#6955</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img
+                                                src="https://cdn.discordapp.com/avatars/260744645884116993/d4eb3ece2848f97ddfdeafec75ea22fa.webp?size=1024" style="border-radius: 100%;">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Fardin || Developer</strong>
+                                            <small>@Fardin || Developer#9589</small>
                                             <span class="tag is-success is-small">Back end Developer</span>
                                             <br>
                                         </p>
