--- a/web/views/policy.ejs
+++ b/web/views/policy.ejs
@@ -83,5 +83,10 @@
             </div>
         </div>
         </div>
+        <div class="hero-foot has-text-centered">
+        <br>
+        <br>
+        <p1>Credit to GG142 for the paperwork.</p1>
+        </div>
+</div>
     </section>
-</html>
