--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -24,7 +24,7 @@
             </span>
         </a>
     </div>
-    <div class="nav-right nav-menu">
+    <div class="nav-right nav-menu" id="nav-menu">
         <a class="nav-item" id="nav-" href="/">
             Home
         </a>
