--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -22,7 +22,7 @@
 
         <link rel="stylesheet" href="/discord/icon-discord.css">
         <link rel="stylesheet" href="/css/bulma.css">
-        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
         <link rel="icon" href="/img/icon.png">
 
@@ -42,7 +42,7 @@
             background-repeat: no-repeat;
         }
         .particles-js-canvas-el {
-            top: 0;  
+            top: 0;
             left: 0;
             width: 100%;
             height: 500px;
