--- a/web/views/wip.ejs
+++ b/web/views/wip.ejs
@@ -22,7 +22,7 @@
 
         <link rel="stylesheet" href="/discord/icon-discord.css">
         <link rel="stylesheet" href="/css/bulma.css">
-        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
         <link rel="icon" href="/img/icon.png">
 
