--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -1,39 +1,46 @@
 <nav class="nav has-shadow" style="background-color:rgba(0,0,0,0.29)">
-    &nbsp;
-    &nbsp;
-    <div class="nav-left">
-        <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
-            <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
-            <span>TerraBite</span>
+    <div class="container">
+        <div class="nav-left">
+            <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
+                <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
+                <span>TerraBite</span>
+            </a>
+        </div>
+        <div class="nav-center">
+            <a class="nav-item" href="https://discordapp.com/invite/JJAy6qw">
+                <span class="icon">
+                    <i class="fa socicon-discord" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a class="nav-item" href="wip">
+                <span class="icon">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a class="nav-item" href="https://github.com/TerraBite-Development-Team/TerraBite">
+                <span class="icon">
+                    <i class="fa fa-github" style="padding-top: 2px;" aria-hidden="true"></i>
+                </span>
+            </a>
+        </div>
+        <div class="nav-right nav-menu" id="nav-menu">
+            <a class="nav-item" id="nav-" href="/">
+                Home
+            </a>
+            <a class="nav-item" href="wip" id="nav-docs">
+                Documentation
+            </a>
+            <a class="nav-item" href="blog" id="nav-blog">
+                Blog
+            </a>
+        </div>
+        <% if(authUser) { %>
+        <a id="nav-dashboard" class="nav-item is-tab is-active" href="/wip" title="Go to dashboard">
+            <img class="image is-16x16" src="<%= authUser.avatar %>" style="border-radius: 100%;" alt="<%= authUser.id %>">
+            &nbsp;
+            <span><%= authUser.username %></span>
         </a>
-    </div>
-    <div class="nav-center">
-        <a class="nav-item" href="https://discordapp.com/invite/JJAy6qw">
-            <span class="icon">
-                <i class="fa socicon-discord"></i>
-            </span>
-        </a>
-        <a class="nav-item" href="wip">
-            <span class="icon">
-                <i class="fa fa-check"></i>
-            </span>
-        </a>
-        <a class="nav-item" href="https://github.com/TerraBite-Development-Team/TerraBite">
-            <span class="icon">
-                <i class="fa fa-github" style="padding-top: 2px;"></i>
-            </span>
-        </a>
-    </div>
-    <div class="nav-right nav-menu" id="nav-menu">
-        <a class="nav-item" id="nav-" href="/">
-            Home
-        </a>
-        <a class="nav-item" href="wip" id="nav-docs">
-            Documentation
-        </a>
-        <a class="nav-item" href="blog" id="nav-blog">
-            Blog
-        </a>
+        <% } else { %>
         <p class="nav-item control has-addons">
             <a class="button is-white is-outlined" href="/add">
                 <span class="icon is-small">
@@ -48,12 +55,17 @@
                 <span>Support</span>
             </a>
         </p>
+        <% } %>
+        <div class="field">
+            <p class="control has-icons-left">
+            </p>
+        </div>
+        <span class="nav-toggle" id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
     </div>
-    <span class="nav-toggle" id="nav-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-    </span>
 </nav>
 <script>
     var currentPage = window.location.pathname.split("/")[1];
