--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -67,7 +67,7 @@
                                 <% } %>
                             </h2>
                             <% if (!loggedInStatus) { %>
-                    <a class="button is-white is-medium is-outlined" style="position: absolute" href="/login">
+                    <a class="button is-white is-medium is-outlined is-disabled" style="position: absolute" disabled="">
                         <span class="icon is-medium">
                             <i class="fa fa-sign-in"></i>
                         </span>
@@ -94,7 +94,7 @@
                         <% } %>
                     </h2>
                     <% if (!loggedInStatus) { %>
-                    <a class="button is-white is-medium is-outlined" style="position: absolute" href="/login">
+                    <a class="button is-white is-medium is-outlined is-disabled" style="position: absolute" disabled>
                         <span class="icon is-medium">
                             <i class="fa fa-sign-in"></i>
                         </span>
