--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -94,7 +94,7 @@
                         <% } %>
                     </h2>
                     <% if (!loggedInStatus) { %>
-                    <a class="button is-white is-medium is-outlined is-disabled" style="position: absolute" disabled>
+                    <a class="button is-white is-medium is-outlined is-disabled" disabled>
                         <span class="icon is-medium">
                             <i class="fa fa-sign-in"></i>
                         </span>
