--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -33,32 +33,28 @@
             <a class="nav-item" href="blog" id="nav-blog">
                 Blog
             </a>
-        </div>
-        <% if(authUser) { %>
-        <a id="nav-dashboard" class="nav-item is-tab is-active" href="/wip" title="Go to dashboard">
-            <img class="image is-16x16" src="<%= authUser.avatar %>" style="border-radius: 100%;" alt="<%= authUser.id %>">
-            &nbsp;
-            <span><%= authUser.username %></span>
-        </a>
-        <% } else { %>
-        <p class="nav-item control has-addons">
-            <a class="button is-white is-outlined" href="/add">
+            <% if(authUser) { %>
+            <a id="nav-dashboard" class="nav-item is-tab is-active" href="/wip" title="Go to dashboard">
+                <img class="image is-16x16" src="<%= authUser.avatar %>" style="border-radius: 100%;" alt="<%= authUser.id %>">
+                &nbsp;
+                <span><%= authUser.username %></span>
+            </a>
+            <% } else { %>
+            <p class="nav-item control has-addons">
+                <a class="button is-white is-outlined" href="/add">
                 <span class="icon is-small">
                     <i class="fa fa-plus"></i>
                 </span>
-                <span>Add</span>
-            </a>
-            <a class="button is-info is-outlined is-iverted" href="<%= support %>" style="margin-left: 0px;">
+                    <span>Add</span>
+                </a>
+                <a class="button is-info is-outlined" href="<%= support %>" style="margin-left: 0px;">
                 <span class="icon is-small">
                     <i class="fa fa-handshake-o"></i>
                 </span>
-                <span>Support</span>
-            </a>
-        </p>
-        <% } %>
-        <div class="field">
-            <p class="control has-icons-left">
+                    <span>Support</span>
+                </a>
             </p>
+            <% } %>
         </div>
         <span class="nav-toggle" id="nav-toggle">
             <span></span>
