--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TerraBite &bull; Coming Soon</title>
+        <title>TerraBite &bull; The best Discord Bot you'll ever come across.</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="oskikiboy">
-        <meta name="description" content="Coming Soon">
+        <meta name="description" content="The best Discord Bot you'll ever come across.">
 
         <meta property="og:type" content="website">
         <meta property="og:title" content="TerraBite">
         <meta property="og:image" content="/img/icon.png">
-        <meta property="og:description" content="Coming Soon">
+        <meta property="og:description" content="The best Discord Bot you'll ever come across.">
 
         <meta name="twitter:title" content="TerraBite">
         <meta name="twitter:image" content="/img/icon.png">
-        <meta name="twitter:description" content="Coming Soon">
+        <meta name="twitter:description" content="The Best Discord Bot you'll ever come across.">
 
         <link rel="shortcut icon" type="image/png" href="/img/icon.png">
         <meta name="theme-color" content="#551A8B">
@@ -61,7 +61,7 @@
                             <h1 class="title is-1" style="color:#fff;">&bull; Terrabite</h1>
                             <h2 style="margin-top: -1.2rem;">
                                 <% if (!loggedInStatus) { %>
-                                <strong>TerraBite</strong> is a WIP Discord bot.
+                                <strong>TerraBite</strong> is The Best <b>Discord</b> Bot you'll ever come across.
                                 <% } else { %>
                                 Welcome to the <strong>TerraBite</strong> Dashboard ~ WIP.
                                 <% } %>
@@ -88,7 +88,7 @@
                     <h1 class="title is-1">TerraBite</h1>
                     <h2 class="subtitle is-4">
                         <% if (!loggedInStatus) { %>
-                        <strong>TerraBite</strong> is a WIP Discord bot.
+                        <strong>TerraBite</strong> is The Best <b>Discord</b> Bot you'll ever come across.
                         <% } else { %>
                         Welcome to the <strong>TerraBite</strong> Dashboard ~ WIP.
                         <% } %>
@@ -176,90 +176,7 @@
                 </div>
             </div>
         </section>
-        <!-- Credit to Aurora -->
-        <section class="hero is-black" id="team">
-            <br>
-            <div class="container has-text-centered box" id="dark">
-                <div class="heading">
-                    <h1 class="title" style="color:#363636;">Development team</h1>
-                    <div style="padding: -40px">
-                        <hr>
-                    </div>
-                    <h2 class="subtitle" style="color:#363636;"><i>Those who have created the bot</i></h2>
-                </div>
-                <br><br>
-                <div class="columns" id="lead">
-                    <div class="column">
-                        <a href="https://oskikiboy.me" target="_blank" rel="noopener noreferrer"><img src="https://oskikiboy.me/img/icon.png" class="someone founder"></a>
-                        <h3>oskikiboy</h3>
-                        <span class="tag is-danger" style="background-color: #5400e9">Project Lead &amp; Founder</span>
-                    </div>
-                    <div class="column">
-                        <a href="https://sideofchips.co.uk" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048" class="someone lead"></a>
-                        <h3>Haxmat</h3>
-                        <span class="tag is-danger">Project Lead</span>
-                    </div>
-
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/229232856063410176/05ed767353dc5e24d79666ad1220e1f6.webp?size=2048" class="someone ldev">
-                        <h3>motasim</h3>
-                        <span class="tag is-danger">Lead Developer</span>
-                    </div>
-
-                    <div class="column">
-                        <a href="http://adampro.cu.cc" target="_blank" rel="noopener noreferrer"><img src="http://adampro.cu.cc/img/icon.png" class="someone ldev"></a>
-                        <h3>Cringy Adam</h3>
-                        <span class="tag is-danger">Lead developer</span>
-                    </div>
-                </div>
-                <div class="columns has-text-centered">
-                    <div class="column is-4"></div>
-                    <div class="column is-2">
-                        <a href="https://blackberrypi.jimdo.com" target="_blank" rel="noopener noreferrer"><img src="https://image.jimcdn.com/app/cms/image/transf/dimension=176x10000:format=png/path/s9f28a009b51a07b8/image/ide51b81d11f5ca70/version/1496651998/image.png" class="someone py"></a>
-                        <h3>Raspberry Pi</h3>
-                        <span class="tag is-success">TerraBite.py lead</span>
-                    </div>
-                    <div class="column is-2">
-                        <img src="https://cdn.discordapp.com/avatars/301668270648328192/ed9eb124553e2fccf7058f96edf621e1.jpg?size=1024" class="someone gfx">
-                        <h3>Tate</h3>
-                        <span class="tag is-primary">GFX Designer</span>
-                    </div>
-                </div>
-                <div class="columns">
-                    <div class="column">
-                        <a href="http://codefox.ga" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/avatars/236002091120721930/78726411e07da210a51c3ae1c759bcb1.jpg?size=1024" class="someone dev"></a>
-                        <h3>Codefox</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/178409772436029440/a_0fbc1a8e9ee2427c407940ac01548ee2.gif?size=2048" class="someone dev">
-                        <h3>Acorn</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/150707175214415872/a4b53a93b1685b6a021b7a44cc95b4e3.webp?size=1024" class="someone dev">
-                        <h3>Brandon14</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/209395113485402123/b6f7cae6ee6a820b6ececda49a21e9b1.webp?size=1024" class="someone dev">
-                        <h3>Jayden</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/258971374511587329/c14dd1b3810a0de7cf5cd55e3382b70d.webp?size=1024" class="someone dev">
-                        <h3>Hurricane</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                    <div class="column">
-                        <img src="https://cdn.discordapp.com/avatars/260744645884116993/d4eb3ece2848f97ddfdeafec75ea22fa.webp?size=1024" class="someone dev">
-                        <h3>Fardin</h3>
-                        <span class="tag is-info">Developer</span>
-                    </div>
-                </div>
-            </div>
-            <br>
-        </section>
+        <% include ./partials/staff %>
         <% include ./partials/foot %>
         <% include ./partials/up %>
         <script src="/js/app.js"></script>
