--- a/web/views/partials/foot.ejs
+++ b/web/views/partials/foot.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="content has-text-centered">
             <p>
-                <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="http://fontawesome.io/">Font Awesome</a> and Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a> and tate. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
+                <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="http://fontawesome.io/">Font Awesome</a> and Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a> and <a href="http://www.arceum.co/">tate</a>. Credit to the <a href="https://auroracommunity.co">Aurora Community Website</a> for our staff section. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
                 <br>
                 <br>
                 Copyright © The TerraBite Development Group, 2017. All rights reserved.
