--- a/web/views/global.ejs
+++ b/web/views/global.ejs
@@ -129,7 +129,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                <strong>Welcome to the TerraBite Dashboard</strong>, but unfortunately it seems that this is a WIP. <h1><span class="tag is-dark is-medium">Work In Progress</span></h1><br><br/>
+                <strong>Welcome to the TerraBite Maintainer Dashboard</strong>, but unfortunately it seems that this is a WIP. <h1><span class="tag is-dark is-medium">Work In Progress</span></h1><br><br/>
             </h1>
         </div>
     </div>
